// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots components/ui/DialogForm default 1`] = `
<div
  style="height: 100%;"
>
  <span>
    <form>
      <div
        class="p-fluid p-dialog-mask p-component-overlay p-component-overlay-enter"
        style="z-index: 1021;"
      >
        <div
          aria-modal="true"
          class="p-dialog p-component p-dialog-enter p-dialog-enter-active"
          role="dialog"
          style="z-index: 1022; visibility: visible; display: none; transform-origin: top; top: 0px; left: 0px;"
        >
          <div
            class="p-dialog-header"
          >
            <!---->
             
            <div
              class="p-dialog-header-icons"
            >
              <!---->
               
              <button
                aria-label="close"
                class="p-dialog-header-icon p-dialog-header-close p-link"
                tabindex="-1"
                type="button"
              >
                <span
                  class="p-dialog-header-close-icon pi pi-times"
                />
                <span
                  class="p-ink"
                />
              </button>
            </div>
          </div>
           
          <div
            class="p-dialog-content"
            style="max-height: 70vh;"
          />
           
          <div
            class="p-dialog-footer"
          >
            <button
              class="p-button-text p-button-secondary p-button p-component"
              type="button"
            >
              <span
                class="pi pi-times p-button-icon p-button-icon-left"
              />
               
              <span
                class="p-button-label"
              >
                Cancel
              </span>
               
              <!---->
              <span
                class="p-ink"
              />
            </button>
             
            <button
              class="p-button-primary p-button p-component"
              disabled="disabled"
              type="submit"
            >
              <span
                class="pi pi-check p-button-icon p-button-icon-left"
              />
               
              <span
                class="p-button-label"
              >
                Submit
              </span>
               
              <!---->
              <span
                class="p-ink"
              />
            </button>
          </div>
        </div>
      </div>
    </form>
  </span>
</div>
`;

exports[`storyshots components/ui/DialogForm with header and content 1`] = `
<div
  style="height: 100%;"
>
  <span>
    <form>
      <div
        class="p-fluid p-dialog-mask p-component-overlay p-component-overlay-enter"
        style="z-index: 1022;"
      >
        <div
          aria-labelledby="pv_id_21_header"
          aria-modal="true"
          class="p-dialog p-component p-dialog-enter p-dialog-enter-active"
          role="dialog"
          style="z-index: 1023; visibility: visible; display: none; transform-origin: top; top: 0px; left: 0px;"
        >
          <div
            class="p-dialog-header"
          >
            <span
              class="p-dialog-title"
              id="pv_id_21_header"
            >
              This is the header
            </span>
             
            <div
              class="p-dialog-header-icons"
            >
              <!---->
               
              <button
                aria-label="close"
                class="p-dialog-header-icon p-dialog-header-close p-link"
                tabindex="-1"
                type="button"
              >
                <span
                  class="p-dialog-header-close-icon pi pi-times"
                />
                <span
                  class="p-ink"
                />
              </button>
            </div>
          </div>
           
          <div
            class="p-dialog-content"
            style="max-height: 70vh;"
          >
            <div
              class="p-field"
            >
              <label
                for="example"
              >
                 Input Label
              </label>
               
              <input
                id="example"
                name="example"
                type="text"
              />
            </div>
          </div>
           
          <div
            class="p-dialog-footer"
          >
            <button
              class="p-button-text p-button-secondary p-button p-component"
              type="button"
            >
              <span
                class="pi pi-times p-button-icon p-button-icon-left"
              />
               
              <span
                class="p-button-label"
              >
                Cancel
              </span>
               
              <!---->
              <span
                class="p-ink"
              />
            </button>
             
            <button
              class="p-button-primary p-button p-component"
              disabled="disabled"
              type="submit"
            >
              <span
                class="pi pi-check p-button-icon p-button-icon-left"
              />
               
              <span
                class="p-button-label"
              >
                Submit
              </span>
               
              <!---->
              <span
                class="p-ink"
              />
            </button>
          </div>
        </div>
      </div>
    </form>
  </span>
</div>
`;

exports[`storyshots components/ui/DialogForm with header, content and actions 1`] = `
<div
  style="height: 100%;"
>
  <span
    isactionform="true"
  >
    <form>
      <div
        class="p-fluid p-dialog-mask p-component-overlay p-component-overlay-enter"
        style="z-index: 1023;"
      >
        <div
          aria-labelledby="pv_id_22_header"
          aria-modal="true"
          class="p-dialog p-component p-dialog-enter p-dialog-enter-active"
          role="dialog"
          style="z-index: 1024; visibility: visible; display: none; transform-origin: top; top: 0px; left: 0px;"
        >
          <div
            class="p-dialog-header"
          >
            <span
              class="p-dialog-title"
              id="pv_id_22_header"
            >
              This is the header
            </span>
             
            <div
              class="p-dialog-header-icons"
            >
              <!---->
               
              <button
                aria-label="close"
                class="p-dialog-header-icon p-dialog-header-close p-link"
                tabindex="-1"
                type="button"
              >
                <span
                  class="p-dialog-header-close-icon pi pi-times"
                />
                <span
                  class="p-ink"
                />
              </button>
            </div>
          </div>
           
          <div
            class="p-dialog-content"
            style="max-height: 70vh;"
          >
            <div
              class="p-field"
            >
              <label
                for="example"
              >
                 Input Label
              </label>
               
              <input
                id="example"
                name="example"
                type="text"
              />
            </div>
          </div>
           
          <div
            class="p-dialog-footer"
          >
            <button
              class="p-button-text p-button-secondary p-button p-component"
              type="button"
            >
              <span
                class="pi pi-times p-button-icon p-button-icon-left"
              />
               
              <span
                class="p-button-label"
              >
                Cancel
              </span>
               
              <!---->
              <span
                class="p-ink"
              />
            </button>
             
            <button
              class="p-button-primary p-button p-component"
              disabled="disabled"
              type="submit"
            >
              <span
                class="pi pi-check p-button-icon p-button-icon-left"
              />
               
              <span
                class="p-button-label"
              >
                Submit
              </span>
               
              <!---->
              <span
                class="p-ink"
              />
            </button>
          </div>
        </div>
      </div>
    </form>
  </span>
</div>
`;
